--- a/jobs-global-task/src/app/features/jobs/compoents/application-form/application-form.component.html
+++ b/jobs-global-task/src/app/features/jobs/compoents/application-form/application-form.component.html
@@ -1,4 +1,6 @@
 <div class="bg-white rounded-lg shadow-lg p-6 w-11/12 md:w-1/2 lg:w-1/3">
+ 
+
   <h2 class="text-2xl font-bold mb-4">Apply for {{ job?.title }}</h2>
   <form [formGroup]="applicationForm" (ngSubmit)="onSubmit()">
     <div class="p-fluid">
@@ -19,7 +21,8 @@
       <div *ngIf="cvError" class="text-red-500">{{ cvError }}</div>
 
       <div class="flex justify-end mt-4 space-x-2">
-        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded" [disabled]="applicationForm.invalid">Submit</button>
+        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded"
+          [disabled]="applicationForm.invalid">Submit</button>
         <button type="button" class="bg-gray-500 text-white px-4 py-2 rounded" (click)="close.emit()">Cancel</button>
       </div>
     </div>
